--- a/app/templates/account/modify_account_manage.html
+++ b/app/templates/account/modify_account_manage.html
@@ -30,6 +30,13 @@
                                     <br>
                                     <hr>
                                     <div class="form-group">
+                                        <label class="col-md-1 control-label">账户昵称</label>
+                                        <div class="col-md-10">
+                                            <input id="account_name" class="form-control" name="nick_name"
+                                                   value="{{ data["nick_name"] }}">
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
                                         <label class="col-md-1 control-label">账户密码</label>
                                         <div class="col-md-10">
                                             <input class="form-control" type="text" id="account_password"
@@ -44,34 +51,13 @@
                                                    value="{{ data["account_rank"] }}">
                                         </div>
                                     </div>
-                                    <div class="form-group">
-                                        <label class="col-md-1 control-label">账户类型</label>
-                                        <div class="col-md-10">
-                                            <select class="form-control input-small" id="account_type">
-                                                <option value=1 {% if data["account_type"] == 1 %}
-                                                        selected {% endif %}>原创</option>
-                                                <option value=2 {% if data["account_type"] == 2 %}
-                                                        selected {% endif %}>解盘(币莱解盘)</option>
-                                                <option value=3 {% if data["account_type"] == 3 %}
-                                                        selected {% endif %}>视频(币莱播报)</option>
-                                                <option value=4 {% if data["account_type"] == 4 %}
-                                                        selected {% endif %}>音频</option>
-                                                <option value=5 {% if data["account_type"] == 5 %}
-                                                        selected {% endif %}>PDF</option>
-                                                <option value=6 {% if data["account_type"] == 6 %}
-                                                        selected {% endif %} >早报</option>
-                                                <option value=7 {% if data["account_type"] == 7 %}
-                                                        selected {% endif %} >晚报</option>
-                                            </select>
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <label class="col-md-1 control-label">已文章数量</label>
-                                            <div class="col-md-10">
-                                            <input class="form-control" type="number" id="account_article_num"
-                                                   value="{{ data["account_article_num"] }}">
-                                        </div>
-                                    </div>
+{#                                    <div class="form-group">#}
+{#                                        <label class="col-md-1 control-label">已文章数量</label>#}
+{#                                            <div class="col-md-10">#}
+{#                                            <input class="form-control" type="number" id="account_article_num"#}
+{#                                                   value="{{ data["account_article_num"] }}">#}
+{#                                        </div>#}
+{#                                    </div>#}
                                     <div class="form-group">
                                         <label class="col-md-1 control-label">总阅读数量</label>
                                             <div class="col-md-10">
@@ -98,6 +84,58 @@
                                             <div class="col-md-10">
                                             <input class="form-control" type="number" id="account_index"
                                                    value="{{ data["account_index"] }}">
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="col-md-1 control-label">信用分</label>
+                                            <div class="col-md-10">
+                                            <input class="form-control" type="number" id="credit_score"
+                                                   value="{{ data["credit_score"] }}">
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="col-md-1 control-label">账户类型</label>
+                                        <div class="col-md-10">
+                                            <select class="form-control input-small" id="account_type">
+                                                <option value=0 {% if data["account_type"] == 0 %}
+                                                        selected {% endif %}>3级图文原创</option>
+                                                <option value=1 {% if data["account_type"] == 1 %}
+                                                        selected {% endif %}>2级图文原创</option>
+                                                <option value=2 {% if data["account_type"] == 2 %}
+                                                        selected {% endif %}>3级非图文原创</option>
+                                                <option value=3 {% if data["account_type"] == 3 %}
+                                                        selected {% endif %}>2级非图文原创</option>
+                                            </select>
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label class="col-md-1 control-label">账户所属平台</label>
+                                        <div class="col-md-10">
+                                            <select class="form-control input-small" id="platform_type">
+                                                {% for x in platform_ls %}
+                                                    {% if data["account_type"] == x["id"] %}
+                                                        <option value={{ x["id"] }} selected>{{ x["platform_name"] }}</option>
+                                                    {% else %}
+                                                        <option value={{ x["id"] }}>{{ x["platform_name"] }}</option>
+                                                    {% endif %}
+                                                {% endfor %}
+                                            </select>
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label class="col-md-1 control-label">账户分类</label>
+                                        <div class="col-md-10">
+                                            <select class="form-control input-small" id="category_type">
+                                                {% for x in category_ls %}
+                                                    {% if data["account_type"] == x["id"] %}
+                                                        <option value={{ x["id"] }} selected>{{ x["category_name"] }}</option>
+                                                    {% else %}
+                                                        <option value={{ x["id"] }}>{{ x["category_name"] }}</option>
+                                                    {% endif %}
+                                                {% endfor %}
+                                            </select>
                                         </div>
                                     </div>
                                 </div>
@@ -128,12 +166,16 @@
             formData.append('id', {{data["id"]}});
             formData.append('account_password', $('#account_password').val());
             formData.append('account_rank', $("#account_rank").val());
-            formData.append('account_article_num', $("#account_article_num").val());
+            {#formData.append('account_article_num', $("#account_article_num").val());#}
             formData.append('account_type', $("#account_type").val());
             formData.append('total_read_num', $("#total_read_num").val());
             formData.append('total_play_num', $("#total_play_num").val());
             formData.append('total_subscribe_num', $("#total_subscribe_num").val());
             formData.append('account_index', $("#account_index").val());
+
+            formData.append('credit_score', $("#credit_score").val());
+            formData.append('platform_type', $("#platform_type").val());
+            formData.append('category_type', $("#category_type").val());
 
             layer.confirm('是否修改？', {
                 btn: ['确认', '取消']
