--- a/app/templates/article/add_article_upload_set.html
+++ b/app/templates/article/add_article_upload_set.html
@@ -25,30 +25,36 @@
                                 {#                                        {{form.hidden_tag()}}#}
                                 <div class="form-body">
                                     <div class="form-group">
-                                        <label class="control-label col-md-1">账 户</label>
+                                        <label class="control-label col-md-1">账户类型</label>
                                         <div class="col-md-10">
-                                            <select class="form-control" id="account_name">
-                                                {% for x in data %}
-                                                    <option value={{x["id"]}}>{{x["account_name"]}}</option>
+                                            <select class="form-control input-small" id="account_type">
+                                                <option value=0>3级图文原创</option>
+                                                <option value=1>2级图文原创</option>
+                                                <option value=2>3级非图文原创</option>
+                                                <option value=3>2级非图文原创</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="control-label col-md-1">分类</label>
+                                        <div class="col-md-10">
+                                            <select class="form-control input-small" id="category_type">
+                                                {% for x in category_ls %}
+                                                    <option value={{ x["id"] }}>{{ x["category_name"] }}</option>
                                                 {% endfor %}
                                             </select>
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                            <label class="control-label col-md-1">文章类型</label>
+                                            <label class="control-label col-md-1">发送平台</label>
                                             <div class="col-md-10">
-                                                <select class="form-control" id="article_type">
-                                                    <option value=1>原创</option>
-                                                    <option value=2>解盘(币莱解盘)</option>
-                                                    <option value=3>视频(币莱播报)</option>
-                                                    <option value=4>音频</option>
-                                                    <option value=5>PDF</option>
-                                                    <option value=6>早报</option>
-                                                    <option value=7>晚报</option>
-                                                </select>
+                                                <select class="form-control input-small" id="platform_type">
+                                                {% for x in platform_ls %}
+                                                    <option value={{ x["id"] }}>{{ x["platform_name"] }}</option>
+                                                {% endfor %}
+                                            </select>
                                             </div>
                                     </div>
-
                                     <div class="form-group">
                                         <label class="control-label col-md-1">发送类型</label>
                                         <div class="col-md-10">
@@ -58,12 +64,12 @@
                                             </select>
                                         </div>
                                     </div>
-                                    <div class="form-group">
-                                        <label class="control-label col-md-1">发送类型</label>
-                                        &nbsp;&nbsp;&nbsp;&nbsp;<input type="text" id="datepicker"
-                                                                       class="form_datetime"
-                                                                       data-date-format="yyyy-mm-dd hh:ii">
-                                    </div>
+{#                                    <div class="form-group">#}
+{#                                        <label class="control-label col-md-1">发送类型</label>#}
+{#                                        &nbsp;&nbsp;&nbsp;&nbsp;<input type="text" id="datepicker"#}
+{#                                                                       class="form_datetime"#}
+{#                                                                       data-date-format="yyyy-mm-dd hh:ii">#}
+{#                                    </div>#}
                                 </div>
                                 <div class="form-actions">
                                     <div class="row">
@@ -94,6 +100,8 @@
             formData.append('account_name', $('#account_name').val());
             formData.append('article_type', article_type);
             formData.append('send_type', $('#send_type').val());
+            formData.append('category_type', $('#category_type').val());
+            formData.append('platform_name', $('#platform_name').val());
             console.log($('#datepicker').val())
 
             $('#datepicker').val().Format("yyyy-MM-dd hh:mm:ss.S")
