--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -143,7 +143,7 @@
                         </li>
                         <li class="nav-item  ">
                             <a href="/article_upload_set" class="nav-link ">
-                                <span class="title" id="news_list">文章上传设置</span>
+                                <span class="title" id="news_list">文章上传任务</span>
                                 <span class="badge" id="news_count" style="background: #3598dc"></span>
                             </a>
                         </li>
