--- a/app/templates/account/account_manage_list.html
+++ b/app/templates/account/account_manage_list.html
@@ -110,7 +110,7 @@
 										</div>
 										<div class="modal-body"><!-- 在这里添加一些文本 -->
 
-											<form id="importFile" name="importFile" class="form-inline" method="post"
+											<form id="importFile" name="importFile" class="form-horizontal" method="post"
 												enctype="multipart/form-data">
 												<div>
 													<label class="control-label">请选择要导入的excel文件：</label>
