--- a/app/templates/article/modify_article_manage.html
+++ b/app/templates/article/modify_article_manage.html
@@ -55,23 +55,13 @@
                                     </div>
                                 
                                     <div class="form-group">
-                                        <label class="col-md-1 control-label">文章类型</label>
+                                        <label class="col-md-1 control-label">文章分类</label>
                                         <div class="col-md-10">
                                             <select class="form-control input-small" id="article_type">
-                                                <option value=1 {% if data["article_type"] == 1 %}
-                                                        selected {% endif %}>原创</option>
-                                                <option value=2 {% if data["article_type"] == 2 %}
-                                                        selected {% endif %}>解盘(币莱解盘)</option>
-                                                <option value=3 {% if data["article_type"] == 3 %}
-                                                        selected {% endif %}>视频(币莱播报)</option>
-                                                <option value=4 {% if data["article_type"] == 4 %}
-                                                        selected {% endif %}>音频</option>
-                                                <option value=5 {% if data["article_type"] == 5 %}
-                                                        selected {% endif %}>PDF</option>
-                                                <option value=6 {% if data["article_type"] == 6 %}
-                                                        selected {% endif %} >早报</option>
-                                                <option value=7 {% if data["article_type"] == 7 %}
-                                                        selected {% endif %} >晚报</option>
+                                                {% for row in category_ls %}
+                                                    <option value=1 {% if data["category_type"] == row["id"] %}
+                                                        selected {% endif %}>{{ row["category_name"] }}</option>
+                                                {% endfor %}
                                             </select>
                                         </div>
                                     </div>
